// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> with hidden class should render and test snapshot 1`] = `
<div
  class="chatalert__default chatalert__default--hidden"
>
  More new messages below
</div>
`;

exports[`<Alert /> without hidden class should render and test snapshot 1`] = `
<div
  class="chatalert__default "
>
  More new messages below
</div>
`;
